Update Foreman configuration settings
This is not a complete update, but it at least takes a first stab at it.
Various settings have been removed and some have updated defaults.

--- a/_includes/manuals/nightly/3.5.2_configuration_options.md
+++ b/_includes/manuals/nightly/3.5.2_configuration_options.md
@@ -106,13 +106,13 @@ Default: ''
 
 ##### bmc_credentials_accessible
 
-By default passwords stored on BMC network interfaces will be visible to other users who can view the host via the ENC YAML preview and accessible through templates, for the purposes of configuring BMC interfaces automatically.
+By default, all BMC passwords will be redacted in template and ENC output, preventing both users from viewing the passwords directly and also from configuration (or access) in Puppet and other config management tools using the ENC interface. Foreman will continue to use the stored password for BMC power operations.
 
-When set to false, all BMC passwords will be redacted in template and ENC output, preventing both users from viewing the passwords directly and also from configuration (or access) in Puppet and other config management tools using the ENC interface. Foreman will continue to use the stored password for BMC power operations.
+When set to true, all passwords stored on BMC network interfaces will be visible to other users who can view the host via the ENC YAML preview and accessible through templates, for the purposes of configuring BMC interfaces automatically.
 
 Note that setting this to false also this requires that `safemode_render` be enabled, else it could be bypassed.
 
-Default: true
+Default: false
 
 ##### clean_up_failed_deployment
 
@@ -130,11 +130,6 @@ See also: create_new_host_when_report_is_uploaded
 If a report is received from Puppet or other configuration management systems, a corresponding host will be created in Foreman if the hostname is unknown.  When false, this behavior is disabled and reports will be discarded from unknown hosts.
 Default: true
 See also: create_new_host_when_facts_are_uploaded
-
-##### db_pending_migration
-When you upgrade Foreman using foreman-installer, the database may migrate its data model to the new version. If this is true, the next run of the installer will run these migrations. If it is false, the database will remain untouched.
-
-Default: true
 
 ##### db_pending_seed
 When you upgrade Foreman using foreman-installer, the new version may contain some seed data such as operating systems, provisioning templates, roles and more. It will also update any previous seeded data. If this is true, the next run of the installer will seed this data. If it is false, the database will not get this seeded data.
@@ -161,26 +156,10 @@ Default: '', but initialized by the database seed to the initially seeded locati
 The name of an organization that hosts uploading facts into Foreman will be assigned to if they are new or missing an organization.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct organization to prevent resource mismatches.  For inherited organization, the fact should use slash-delimited names, e.g. "ACME Inc/Engineering".
 Default: '', but initialized by the database seed to the initially seeded organization
 
-##### default_puppet_environment
-
-When Foreman receives a fact upload from a machine that it has not previously come across it will create a host in its database. If the facts from that host did not contain information about the puppet environment then it will assign the _default_puppet_environment_ environment to this host.
-Default: production
-
-##### Default_variables_Lookup_Path
-
-A Smart-variable's match criteria are evaluated in a specific order and if this search order is not provided then _Default_variables_Lookup_Path_ is used.
-Default: ["fqdn", "hostgroup", "os", "domain"]
-
 ##### delivery_method
 
 The method for sending emails from the Foreman instance, either _sendmail_ (running the command set by _sendmail_location_) to send mail via the configured local MTA, or _smtp_ for direct connection to an outbound SMTP server (given by settings with the _smtp_ prefix).
 Default: sendmail
-
-##### dns_conflict_timeout
-
-When updating a host and DNS conflict detection is performed, each lookup for A and PTR records will be limited to this time in seconds.
-Default: 3 (seconds)
-See also: query_local_nameservers
 
 ##### email_reply_address
 
@@ -192,20 +171,10 @@ Default: Foreman-noreply@&lt;your domain&gt;
 The subject line prefix for any emails sent by Foreman.
 Default: [foreman]
 
-##### enc_environment
-
-When this is _true_, Foreman will send the puppet environment in the ENC yaml output. This is meant to fix conflicts between a node's puppet.conf environment and the environment set in Foreman. On Puppet 3+, agents will take the environment sent by the ENC. When _false_, the ENC yaml will not contain the environment, the node will not update its environment and use the one at puppet.conf.
-Default: true
-
 ##### entries_per_page
 
 The number of entries that will be shown in the web interface for list operations.
 Default: 20
-
-##### fix_db_cache
-
-Foreman maintains a cache of permissions and roles. If this is set to true, Foreman will recreate this cache on the next run.
-Default: false
 
 ##### foreman_url
 
@@ -262,7 +231,7 @@ See also: ignored_interface_identifiers
 ##### ignored_interface_identifiers
 
 When importing facts and updating stored information on network interfaces, any network interface with an identifier (e.g. `eth0`) that matches any of the items in this list will be ignored and not updated. This can be used to avoid updating special types of interfaces when Foreman has limited or no understanding of them. The contents are an array of strings which may contain `*` wildcards to match zero or more characters.
-Default: `['lo', 'usb*', 'vnet*', 'macvtap*', '_vdsmdummy_', 'veth*']`
+Default: `["lo", "en*v*", "usb*", "vnet*", "macvtap*", ";vdsmdummy;", "veth*", "docker*", "tap*", "qbr*", "qvb*", "qvo*", "qr-*", "qg-*", "vlinuxbr*", "vovsbr*", "br-int", "vif*", "cali*"]`
 See also: ignore_puppet_facts_for_provisioning
 
 ##### libvirt_default_console_access
@@ -286,23 +255,14 @@ Default: ''
 
 ##### login_text
 
-Specifies text to be displayed on the Foreman login page underneath the version number.
-Default: ''
+Text to be displayted in the login-page footer. The keyword `$VERSION` is replaced by the current version.
+
+Default: `Version $VERSION`
 
 ##### manage_puppetca
 
 If this option is set to _true_ then Foreman will manage a host's Puppet certificate signing. If it is set to _false_ then some external mechanism is required to ensure that the host's certificate request is signed.
 Default: true
-
-##### max_trend
-
-Days that trend graphs will capture.
-Default: 30
-
-##### modulepath
-
-This it the modulepath that foreman uses when processing puppet modules. It is usually able to determine this itself at runtime but if it is not able to find a value then _modulepath_ is used.
-Default: /etc/puppet/modules
 
 ##### name_generator_type
 
@@ -339,42 +299,16 @@ Default: foreman_organization
 Duration in minutes after which servers classed as out of sync, if the report origin has not been identified.
 Default: 30
 
-##### Parametrized_Classes_in_ENC
-
-In Puppet 2.6.5+, the ENC may send a hash of the class's attributes and values. Before then, the ENC used to send just an array of class names. Set this to _true_ if you are using any version of Puppet equal to or higher than 2.6.5.
-Default: true
-
 ##### proxy_request_timeout
 
 Timeout in seconds used when making REST requests to a Smart Proxy, e.g. when importing Puppet classes or creating DHCP records.  May be set to a larger value when certain operations take a long time.
 Default: 60
-
-##### puppet_interval
-
-This overrides _outofsync_interval_ duration in minutes after which servers reporting via Puppet are classed as out of sync.
-Default: 35
 
 ##### query_local_nameservers
 
 If _true_, Foreman will query the local DNS. When _false_ Foreman will query the SOA/NS authority. Warning! Querying a resolver can cause Foreman to get false positives when checking presence of DNS records due to caching.
 Default: false
 See also: dns_conflict_timeout
-
-##### remote_addr
-
-When Foreman receives client web requests via a smart proxy, proxy or load balancer, the original client source IP address is lost, replaced by the smart proxy, proxy, or load balancers IP instead.  For template requests without a token, this causes a failure, because Foreman can't match the request against a valid host.
-
-Smart proxies, and other devices if configured, can preserve the original client IP within an HTTP `X-Forwarded-For` header, which Foreman can evaluate and use to match the request against a valid host.
-
-In order to prevent spoofing and provide some level of security, Foreman will only evaluate X-Forwarded-For headers from devices which match the list of IPs configured here.
-
-This is a regular expression, so it can support several load balancers, i.e: (10.0.0.1|127.0.0.1)
-Default: 127.0.0.1
-
-##### require_ssl_smart_proxies
-
-When set to _true_, Foreman requires a client SSL certificate on requests from smart proxies or services on them (e.g. Puppet servers), and will verify the CN of the certificate against the known smart proxies. If false, it uses the reverse DNS of the IP address making the request. require_ssl in ```config/settings.yaml``` should be enabled too. For more information about securing the connection between Puppet servers or smart proxies and Foreman, see [Section 5.4.1](manuals/{{page.version}}/index.html#5.4.1SecuringPuppetMasterRequests)
-Default: true
 
 ##### restrict_registered_smart_proxies
 
