Use syntax highlighting where available

--- a/_includes/manuals/nightly/3.5.6_cli.md
+++ b/_includes/manuals/nightly/3.5.6_cli.md
@@ -38,7 +38,7 @@ Plugin specific configuration should be nested under plugin's name.
 
 #### Sample config
 
-{% highlight yaml %}
+```yaml
 :modules:
     - hammer_cli_foreman
 
@@ -49,4 +49,4 @@ Plugin specific configuration should be nested under plugin's name.
 
 :log_dir: '/var/log/foreman/'
 :log_level: 'debug'
-{% endhighlight %}
+```
