--- a/_includes/manuals/nightly/4.11.2_macros.md
+++ b/_includes/manuals/nightly/4.11.2_macros.md
@@ -11,7 +11,7 @@ behaviors and capabilities:
 
 Consider following example:
 
-```
+```erb
 <%- load_hosts(search: 'name ~ example.com').each_record do |host| -%>
 <%=   host.name %>,<%= host.mac %>
 <%- end -%>
