--- a/_includes/manuals/nightly/4.3.11_smartproxy_libvirt.md
+++ b/_includes/manuals/nightly/4.3.11_smartproxy_libvirt.md
@@ -18,23 +18,25 @@ version 0.6.1 or higher.
 Define the TFTP root first. Edit 'default' virtual network and add 'tftp', 'bootp'
 and 'domain' elements.
 
-    <network>
-     <name>default</name>
-     <uuid>16b7b280-7462-428c-a65c-5753b84c7545</uuid>
-     <forward mode='nat'/>
-     <bridge name='virbr0' stp='on' delay='0' />
-     <domain name="local.lan"/>
-     <dns>
-     </dns>
-     <mac address='52:54:00:a6:01:5d'/>
-     <ip address='192.168.122.1' netmask='255.255.255.0'>
-       <tftp root='/var/tftproot' />
-       <dhcp>
-         <range start='192.168.122.2' end='192.168.122.254' />
-         <bootp file='pxelinux.0' />
-       </dhcp>
-     </ip>
-    </network>
+```xml
+<network>
+  <name>default</name>
+  <uuid>16b7b280-7462-428c-a65c-5753b84c7545</uuid>
+  <forward mode='nat'/>
+  <bridge name='virbr0' stp='on' delay='0' />
+  <domain name="local.lan"/>
+  <dns>
+  </dns>
+  <mac address='52:54:00:a6:01:5d'/>
+  <ip address='192.168.122.1' netmask='255.255.255.0'>
+    <tftp root='/var/tftproot' />
+    <dhcp>
+      <range start='192.168.122.2' end='192.168.122.254' />
+      <bootp file='pxelinux.0' />
+    </dhcp>
+  </ip>
+</network>
+```
 
 Create a TFTP root directory, make sure it is writeable by the foreman proxy
 user (`foreman-proxy` for instance) and accessible to the account
@@ -70,24 +72,29 @@ Configure the Smart Proxy settings under config/ to:
 
 Important configuration values are, in `tftp.yml`:
 
-    :tftp: true
-    :tftproot: /var/tftproot
-    :tftp_servername: 192.168.122.1
+```yaml
+:tftp: true
+:tftproot: /var/tftproot
+:tftp_servername: 192.168.122.1
 
 in `dns.yml`:
 
-    :enabled: true
-    :use_provider: dns_libvirt
+```yaml
+:enabled: true
+:use_provider: dns_libvirt
 
 in `dhcp.yml`:
 
-    :enabled: true
-    :use_provider: dhcp_libvirt
+```yaml
+:enabled: true
+:use_provider: dhcp_libvirt
 
 and in `dns_libvirt.yml` and/or `dhcp_libvirt.yml`:
 
-    :network: default
-    :url: qemu:///system
+```yaml
+:network: default
+:url: qemu:///system
+```
 
 #### Additional steps
 
