--- a/_includes/manuals/nightly/4.3.13_smartproxy_logs.md
+++ b/_includes/manuals/nightly/4.3.13_smartproxy_logs.md
@@ -2,7 +2,9 @@ The smart proxy's logs module provides an API to retrieve recently logged messag
 
 The module has no configuration options of its own, and is just enabled by configuring `/etc/foreman-proxy/settings.d/logs.yml`:
 
-    :enabled: https
+```yaml
+:enabled: https
+```
 
 Once enabled, restart the foreman-proxy service and refresh the features on your Foreman server.
 
