--- a/_includes/manuals/nightly/4.3.4_smartproxy_dhcp.md
+++ b/_includes/manuals/nightly/4.3.4_smartproxy_dhcp.md
@@ -16,20 +16,26 @@ Extra providers are available as plugins and can be installed through packages. 
 
 To enable the DHCP module and enable a provider, `dhcp.yml` must contain:
 
-    :enabled: https
-    :use_provider: dhcp_isc
+```yaml
+:enabled: https
+:use_provider: dhcp_isc
+```
 
 For providers from plugins, check the plugin documentation to determine the exact provider name.
 
 The module manages a DHCP server on the local host by default, but for providers that can be run remotely, the server address can be changed:
 
-    :server: 127.0.0.1
+```yaml
+:server: 127.0.0.1
+```
 
 Note that if the DHCP server is running remotely, some providers (notably ISC) require that the configuration files must be accessible to the Smart Proxy still. This can be achieved with a network file system, e.g. NFS.
 
 All available subnets will be loaded and can be managed by default, but this can have a performance penalty. If only some subnets are used, specify them as follows in `network_address/network_mask` notation:
 
-    :subnets: [192.168.205.0/255.255.255.128, 192.168.205.128/255.255.255.128]
+```yaml
+:subnets: [192.168.205.0/255.255.255.128, 192.168.205.128/255.255.255.128]
+```
 
 Each provider has its own configuration file in the same directory with its own settings, e.g. `dhcp_isc.yml`. This usually needs additional configuration after changing the `use_provider` setting.
 
@@ -39,24 +45,31 @@ The dhcp_isc provider uses a combination of the ISC DHCP server OMAPI management
 
 This provider requires the `config` and `leases` settings in the `dhcp_isc.yml` configuration file, which should be set to the location of the DHCP server config and lease files. On a Red Hat or Fedora server use:
 
-    :config: /etc/dhcp/dhcpd.conf
-    :leases: /var/lib/dhcpd/dhcpd.leases
+```yaml
+:config: /etc/dhcp/dhcpd.conf
+:leases: /var/lib/dhcpd/dhcpd.leases
+```
 
 On a Debian or Ubuntu DHCP server, use the following values instead:
 
-    :dhcp_config: /etc/dhcp3/dhcpd.conf
-    :dhcp_leases: /var/lib/dhcp3/dhcpd.leases
+```yaml
+:dhcp_config: /etc/dhcp3/dhcpd.conf
+:dhcp_leases: /var/lib/dhcp3/dhcpd.leases
+```
 
 <div class="alert alert-info">The foreman-proxy account must be able to read both configuration files. In particular, check the permissions on the parent directory (e.g. /etc/dhcp) permit world read/execute.</div>
 
 If the DHCP server is secured with an "omapi_key", the following entries must be set with the same values:
 
-    :key_name: omapi_key
-    :key_secret: XXXXXXXX
+```yaml
+:key_name: omapi_key
+:key_secret: XXXXXXXX
 
 If the DHCP server is listening on a non-standard OMAPI port (i.e. not 7911), then change this with:
 
-    :omapi_port: 7911
+```yaml
+:omapi_port: 7911
+```
 
 For DHCP servers running on a different host, change `:server` in the main `dhcp.yml` configuration file.
 
@@ -66,7 +79,9 @@ The native_ms provider manages reservations in Microsoft Active Directory via it
 
 Possible configuration options in `dhcp_native_ms.yml` are:
 
-	:disable_ddns: true
+```yaml
+:disable_ddns: true
+```
 
 When `disable_ddns` is true (default), dynamic DNS updates will be disabled for all hosts that the smart proxy creates. This will slightly slow the host creation process but will ensure that the DHCP server will not create or delete DNS entries on behalf of these clients. It's preferable to disable this feature at the scope level.
 
@@ -78,11 +93,13 @@ daemon.
 
 Possible configuration options in `dhcp_libvirt.yml` are:
 
-    # Libvirt network. Only one network is supported.
-    :network: default
+```yaml
+# Libvirt network. Only one network is supported.
+:network: default
 
-    # Libvirt connection. Make sure proxy effective user have permission to connect.
-    :url: qemu:///system
+# Libvirt connection. Make sure proxy effective user have permission to connect.
+:url: qemu:///system
+```
 
 When configuring local or remote connections, make sure the `foreman-proxy`
 effective user has UNIX permissions to libvirt socket or ssh keys are
