--- a/_includes/manuals/nightly/4.3.5.3_gsstsig.md
+++ b/_includes/manuals/nightly/4.3.5.3_gsstsig.md
@@ -59,12 +59,16 @@ Note the `\047` is written verbatim, and don't forget the semicolon.  ACLs shoul
 
 Update the proxy DNS configuration file (`/etc/foreman-proxy/settings.d/dns.yml`) with the following setting:
 
-    :use_provider: dns_nsupdate_gss
+```yaml
+:use_provider: dns_nsupdate_gss
+```
 
 And the DNS GSS configuration file (`/etc/foreman-proxy/settings.d/dns_nsupdate_gss.yml`) with:
 
-    :dns_tsig_keytab: /etc/foreman-proxy/dns.keytab
-    :dns_tsig_principal: foremanproxy/proxy.example.com@EXAMPLE.COM
+```yaml
+:dns_tsig_keytab: /etc/foreman-proxy/dns.keytab
+:dns_tsig_principal: foremanproxy/proxy.example.com@EXAMPLE.COM
+```
 
 Ensure the `dns_key` setting is not specified, or is commented out.
 
