--- a/_includes/manuals/nightly/4.3.5_smartproxy_dns.md
+++ b/_includes/manuals/nightly/4.3.5_smartproxy_dns.md
@@ -17,14 +17,18 @@ Extra providers are available as plugins and can be installed through packages. 
 
 To enable the DNS module and enable a provider, `dns.yml` must contain:
 
-    :enabled: https
-    :use_provider: dns_nsupdate
+```yaml
+:enabled: https
+:use_provider: dns_nsupdate
+```
 
 For providers from plugins, check the plugin documentation to determine the exact provider name.
 
 The default TTL of DNS records added by the Smart Proxy is 86400 seconds (one day).  This can be changed with the dns_ttl setting:
 
-    :dns_ttl: 86400
+```yaml
+:dns_ttl: 86400
+```
 
 Each provider has its own configuration file in the same directory with its own settings, e.g. `dns_nsupdate.yml`.  This usually needs additional configuration after changing the `use_provider` setting.
 
@@ -36,8 +40,10 @@ DNS servers that support Kerberos authentication, e.g. FreeIPA or Microsoft Acti
 
 This provider has the following settings in the `dns_nsupdate.yml` configuration file:
 
-    #:dns_key: /etc/rndc.key
-    :dns_server: localhost
+```yaml
+#:dns_key: /etc/rndc.key
+:dns_server: localhost
+```
 
 The **dns_key** specifies a file containing a shared secret used to generate a signature for the update request (TSIG record), thus authenticating the smart proxy to the DNS server.
 
@@ -47,8 +53,10 @@ If neither the **dns_key** or GSS-TSIG is used then the update request is sent w
 
 The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.
 
-    :dns_key: /etc/foreman-proxy/Kapi.+157+47848.private
-    :dns_server: dnsserver.site.example.com
+```yaml
+:dns_key: /etc/foreman-proxy/Kapi.+157+47848.private
+:dns_server: dnsserver.site.example.com
+```
 
 #### dns_nsupdate_gss
 
@@ -56,14 +64,18 @@ For servers that support Kerberos/GSS-TSIG to authenticate DNS updates, the dns_
 
 This provider has the following settings in the `dns_nsupdate_gss.yml` configuration file:
 
-    :dns_tsig_keytab: /usr/share/foreman-proxy/dns.keytab
-    :dns_tsig_principal: DNS/host.example.com@EXAMPLE.COM
+```yaml
+:dns_tsig_keytab: /usr/share/foreman-proxy/dns.keytab
+:dns_tsig_principal: DNS/host.example.com@EXAMPLE.COM
+```
 
 See the section on GSS-TSIG DNS below for steps on setting up the requisite accounts and keytabs with both AD and FreeIPA.
 
 The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.
 
-    :dns_server: dnsserver.site.example.com
+```yaml
+:dns_server: dnsserver.site.example.com
+```
 
 #### dns_dnscmd
 
@@ -71,7 +83,9 @@ While the `dns_nsupdate` provider creates dynamic records in Active Directory, t
 
 The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.
 
-    :dns_server: dnsserver.site.example.com
+```yaml
+:dns_server: dnsserver.site.example.com
+```
 
 #### dns_libvirt
 
@@ -81,11 +95,13 @@ daemon.
 
 Possible configuration options in `dns_libvirt.yml` are:
 
-    # Libvirt network. Only one network is supported.
-    :network: default
+```yaml
+# Libvirt network. Only one network is supported.
+:network: default
 
-    # Libvirt connection. Make sure proxy effective user have permission to connect.
-    :url: qemu:///system
+# Libvirt connection. Make sure proxy effective user have permission to connect.
+:url: qemu:///system
+```
 
 When configuring local or remote connections, make sure the `foreman-proxy`
 effective user has UNIX permissions to libvirt socket or ssh keys are
