--- a/_includes/manuals/nightly/4.3.8.2_freeipa_realm.md
+++ b/_includes/manuals/nightly/4.3.8.2_freeipa_realm.md
@@ -36,7 +36,9 @@ Then update `settings.d/realm_freeipa.yml` with the relevant settings.
 
 If you're using FreeIPA to manage DNS records, and want them to be automatically deleted when the host is deleted in Foreman, set this to true:
 
-    :remove_dns: true
+```yaml
+:remove_dns: true
+```
 
 Finally, trust the IPA Certificate Authority. Ensure you have the most up-to-date version of the `ca-certificates` package installed.
 
