--- a/_includes/manuals/nightly/7.1_novnc.md
+++ b/_includes/manuals/nightly/7.1_novnc.md
@@ -10,10 +10,11 @@ Foreman uses the excellent javascript VNC library [noVNC](https://novnc.com/info
 
 For VNC only, encrypted connections are the default on new installations.  If you have an older installation of Foreman, you can configure encrypted websockets by adding these lines to `/etc/foreman/settings.yml`, and configuring the correct path to the same SSL certificates apache uses:
 
-
-    :websockets_encrypt: on
-    :websockets_ssl_key: /var/lib/puppet/ssl/private_keys/foreman.example.com
-    :websockets_ssl_cert: /var/lib/puppet/ssl/certs/foreman.example.com
+```yaml
+:websockets_encrypt: on
+:websockets_ssl_key: /var/lib/puppet/ssl/private_keys/foreman.example.com
+:websockets_ssl_cert: /var/lib/puppet/ssl/certs/foreman.example.com
+```
 
 ### Known issues
 
