--- a/_includes/manuals/nightly/7.2_debugging.md
+++ b/_includes/manuals/nightly/7.2_debugging.md
@@ -3,8 +3,10 @@
 
 Edit `/etc/foreman/settings.yaml` and either uncomment or add these lines:
 
-    :logging:
-      :level: debug
+```yaml
+:logging:
+  :level: debug
+```
 
 And reload Foreman:
 
@@ -32,9 +34,11 @@ The following loggers needs to be explicitly enabled:
 
 Uncomment or add a :loggers block to enable or disable loggers:
 
-    :loggers:
-      :ldap:
-        :enabled: true
+```yaml
+:loggers:
+  :ldap:
+    :enabled: true
+```
 
 Plugins may add their own logs too, see /etc/foreman/plugins/ for their possible configuration.
 
@@ -44,9 +48,11 @@ Also see [Configuration Options]({{ site.baseurl }}manuals/{{ page.version }}/in
 
 Starting from Foreman 1.18, logging stack can be configured to log into system journal:
 
-    :logging:
-      :level: info
-      :type: journald
+```yaml
+:logging:
+  :level: info
+  :type: journald
+```
 
 On Red Hat compatible systems, journald is running in transient mode by default and forwards all logs to syslog which means structured information is dropped after some time (memory buffer only holds few hours back). To see structured fields:
 
@@ -149,17 +155,19 @@ Here is the list of most important structured fields which can help with debuggi
 
 To persist structured fields, enable persistent system journal by creating `/var/log/journal` directory. Alternatively, logging into JSON format can be used with syslog or file appenders for further integration:
 
-    :logging:
-      :level: info
-      :type: syslog
-      :json_items:
-        - logger
-        - timestamp
-        - level
-        - message
-        - mdc
-        - ndc
-      :facility: LOG_LOCAL6
+```yaml
+:logging:
+  :level: info
+  :type: syslog
+  :json_items:
+    - logger
+    - timestamp
+    - level
+    - message
+    - mdc
+    - ndc
+  :facility: LOG_LOCAL6
+```
 
 Structured fields from Foreman appear under "mdc" and "ndc" elements. The logging stack is able to provide additional context via `json_items` setting:
 
@@ -180,8 +188,10 @@ Structured fields from Foreman appear under "mdc" and "ndc" elements. The loggin
 
 By default, syslog facility is set to LOCAL6 (or USER6). This can be changed via:
 
-    :logging:
-      :facility: LOG_LOCAL6
+```yaml
+:logging:
+  :facility: LOG_LOCAL6
+```
 
 To forward logs to separate directory via rsyslog, create file `/etc/rsyslog.d/foreman.conf`:
 
@@ -191,8 +201,10 @@ To forward logs to separate directory via rsyslog, create file `/etc/rsyslog.d/f
 
 Edit `/etc/foreman-proxy/settings.yml` and change or add :log_level:
 
-    # WARN, DEBUG, Error, Fatal, INFO, UNKNOWN
-    :log_level: DEBUG
+```yaml
+# WARN, DEBUG, Error, Fatal, INFO, UNKNOWN
+:log_level: DEBUG
+```
 
 And restart the smart proxy:
 
