--- a/_includes/manuals/nightly/4.3.3.1_smartproxy_bmc_ssh.md
+++ b/_includes/manuals/nightly/4.3.3.1_smartproxy_bmc_ssh.md
@@ -3,14 +3,18 @@ The SSH BMC provider provides a limited level of BMC functionality by running co
 
 It has the following configuration options for authentication, for the remote SSH user and private SSH key:
 
-    :bmc_ssh_user: root
-    :bmc_ssh_key: /usr/share/foreman/.ssh/id_rsa
+```yaml
+:bmc_ssh_user: root
+:bmc_ssh_key: /usr/share/foreman/.ssh/id_rsa
+```
 
 The following configuration options control the commands executed by the provider on the remote host:
 
-    :bmc_ssh_powerstatus: "true"
-    :bmc_ssh_powercycle: "shutdown -r +1"
-    :bmc_ssh_poweroff: "shutdown +1"
-    :bmc_ssh_poweron: "false"
+```yaml
+:bmc_ssh_powerstatus: "true"
+:bmc_ssh_powercycle: "shutdown -r +1"
+:bmc_ssh_poweroff: "shutdown +1"
+:bmc_ssh_poweron: "false"
+```
 
 No power on support is possible with this provider.
