--- a/_includes/manuals/nightly/5.1.10_apipie-bindings.md
+++ b/_includes/manuals/nightly/5.1.10_apipie-bindings.md
@@ -22,7 +22,7 @@ domains['results'].each do |domain|
 end
 ```
 
-```
+```console
 $ ruby domains.rb
 {"fullname"=>"", "dns_id"=>1, "created_at"=>"2016-05-06 08:46:20 UTC", "updated_at"=>"2016-11-24 11:49:06 UTC", "id"=>1, "name"=>"example.com"}
 ```
