Use syntax highlighting where available

--- a/_includes/manuals/nightly/4.3.12_smartproxy_templates.md
+++ b/_includes/manuals/nightly/4.3.12_smartproxy_templates.md
@@ -9,8 +9,10 @@ networks to the Foreman server, when the proxy also handles TFTP.
 Ensure the foreman_url in `/etc/foreman-proxy/settings.yaml` points to your Foreman instance, and that your smart proxy is listening on HTTP by uncommenting `http_port`. Now
 configure `/etc/foreman-proxy/settings.d/templates.yml`:
 
-    :enabled: true
-    :template_url: http://smart-proxy.example.com:8000
+```yaml
+:enabled: true
+:template_url: http://smart-proxy.example.com:8000
+```
 
 Once you've completed the above steps, restart the foreman-proxy service and refresh the features on your Foreman server.
 
