--- a/_includes/manuals/nightly/4.3.2_smartproxy_settings.md
+++ b/_includes/manuals/nightly/4.3.2_smartproxy_settings.md
@@ -108,7 +108,9 @@ Some modules may allow connections from all hosts rather than only the trusted_h
 
 An empty trusted_hosts list will permit no hosts access:
 
-    :trusted_hosts: []
+```yaml
+:trusted_hosts: []
+```
 
 While if the setting is not specified, any host may make requests to the smart proxy, which permits management of any enabled modules and features.
 
@@ -116,13 +118,17 @@ While if the setting is not specified, any host may make requests to the smart p
 
 Some modules make requests *back* to Foreman, e.g. when relaying requests from client hosts.  The following setting changes the destination URL:
 
-    :foreman_url: https://foreman.example.com
+```yaml
+:foreman_url: https://foreman.example.com
+```
 
 And the following settings change the SSL certificates used to authenticate to Foreman and to verify its certificate.  In a typical installation, Foreman and the Smart Proxy may both use certificates signed the same certificate authority, so these default to the values of the ssl_* settings defined above.
 
-    # SSL settings for client authentication against Foreman. If undefined, the values
-    # from general SSL options are used instead. Mainly useful when Foreman uses
-    # different certificates for its web UI and for smart-proxy requests.
-    :foreman_ssl_ca: /etc/foreman-proxy/ssl/certs/ca.pem
-    :foreman_ssl_cert: /etc/foreman-proxy/ssl/certs/fqdn.pem
-    :foreman_ssl_key: /etc/foreman-proxy/ssl/private_keys/fqdn.pem
+```yaml
+# SSL settings for client authentication against Foreman. If undefined, the values
+# from general SSL options are used instead. Mainly useful when Foreman uses
+# different certificates for its web UI and for smart-proxy requests.
+:foreman_ssl_ca: /etc/foreman-proxy/ssl/certs/ca.pem
+:foreman_ssl_cert: /etc/foreman-proxy/ssl/certs/fqdn.pem
+:foreman_ssl_key: /etc/foreman-proxy/ssl/private_keys/fqdn.pem
+```
