Document trusted proxies setting

--- a/_includes/manuals/nightly/3.5.2_configuration_options.md
+++ b/_includes/manuals/nightly/3.5.2_configuration_options.md
@@ -29,6 +29,20 @@ This boolean options configures whether Foreman will provide support for the Jav
 :support_jsonp: false
 ```
 
+##### trusted_proxies
+
+This setting configures Rails' [ActionDispatch::RemoteIp middleware](https://api.rubyonrails.org/classes/ActionDispatch/RemoteIp.html). This is for secure handling of the `X-Forwarded-For` header that HTTP proxies send. Note that some Foreman Proxy features behave as an HTTP proxy (most notably Templates), but it can also be a classical reverse proxy such as Apache.
+
+This should list the IP addresses or IP ranges that can send the `X-Fowarded-For` header. Implicitly this means they can spoof the request IP addresses so only set this if you use a reverse HTTP proxy and on trusted values. Being too broad can introduce security risks.
+
+If you use a reverse proxy in front of Puma (as the installer does by default), be sure to include localhost IPs.
+
+```yaml
+:trusted_proxies:
+  - 127.0.0.0/8
+  - ::1
+```
+
 ##### logging
 
 This options contains a hash of parameters that override the current logging configuration.  It supports any of the options that are in `logging.yaml` (see below), but most usually it's used to change the log level for debugging.
