--- a/_includes/manuals/nightly/4.3.12_smartproxy_templates.md
+++ b/_includes/manuals/nightly/4.3.12_smartproxy_templates.md
@@ -4,6 +4,8 @@ provisioning templates.
 The smart proxy is able to proxy template requests from hosts in isolated
 networks to the Foreman server, when the proxy also handles TFTP.
 
+This feature relies on correctly [configured trusted_proxies]({{ site.baseurl }}manuals/{{page.version}}/index.html#3.5.2ConfigurationOptions) on Foreman.
+
 <div class="alert alert-info">Generally, you want the templates to be available on HTTP as well as HTTPS.  When enabling HTTP on your smart proxy, ensure that other modules' configurations in /etc/foreman-proxy/settings.d/*.yml are secure by setting :enabled: to https instead of true.</div>
 
 Ensure the foreman_url in `/etc/foreman-proxy/settings.yaml` points to your Foreman instance, and that your smart proxy is listening on HTTP by uncommenting `http_port`. Now
