Add Foreman 3.3.1 release notes

--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -62,6 +62,62 @@ With the deprecation of Debian 10 deployments in Foreman 3.2 (and the removal of
 Therefore running Foreman on Ruby 2.5 is deprecated and support will be dropped (together with Debian 10) in Foreman 3.4.
 Please switch to Ruby 2.7.
 
+### Release notes for 3.3.1
+#### Foreman - Audit Log
+* Audit page shows "auditable id / Host2" for "Host1" but Host2 does not exist or deleted from the all hosts ([#35132](https://projects.theforeman.org/issues/35132))
+
+#### Foreman - Compute resources - VMware
+* hammer cannot use the cluster name or id as valid input when clusters are residing inside folders and fails with error fog not found ([#35438](https://projects.theforeman.org/issues/35438))
+
+#### Foreman - Host creation
+* Bulk rebuild hosts can not reset the build token ([#35203](https://projects.theforeman.org/issues/35203))
+
+#### Foreman - Host registration
+* In Global Registration, using another LANG like pt_BR.UTF-8 breaks the UUID ([#35051](https://projects.theforeman.org/issues/35051))
+
+#### Foreman - Inventory
+* Hide reports "Origin" column when table is already filtered by origin ([#35126](https://projects.theforeman.org/issues/35126))
+* Host's power status ping is limited to three seconds ([#35083](https://projects.theforeman.org/issues/35083))
+
+#### Foreman - Organizations and Locations
+* Taxonomies are being set during extlogin too early, leading to user's default taxonomies being ignored ([#34949](https://projects.theforeman.org/issues/34949))
+
+#### Foreman - Rake tasks
+* \`foreman-rake permissions:reset\` should show a warning that it's required to manually update the password in 'foreman.yml' ([#31966](https://projects.theforeman.org/issues/31966))
+
+#### Foreman - Settings
+* Ignore calico interfaces from Foreman ([#35289](https://projects.theforeman.org/issues/35289))
+
+#### Foreman - Smart Proxy
+* Smart Proxy upgrade/install fails due to proxy configuration in  'HTTP(S) proxy' in settings ([#34996](https://projects.theforeman.org/issues/34996))
+
+#### Foreman - Templates
+* Restart yggdrasil from kptm if it is already running ([#35472](https://projects.theforeman.org/issues/35472))
+* ks= kernel parameter in Kickstart default iPXE causes RHEL9 Anaconda failure to start ([#34975](https://projects.theforeman.org/issues/34975))
+* Allow setting up REX pull during provisioning and registration ([#34969](https://projects.theforeman.org/issues/34969))
+* Ubuntu Autoinstall PXELinux template does not reference Smart Proxy correctly ([#34941](https://projects.theforeman.org/issues/34941))
+
+#### Foreman - Tests
+* Update show_me_the_cookies dependency to 6.x ([#35371](https://projects.theforeman.org/issues/35371))
+
+#### Foreman - Unattended installations
+* Add installation medium for Stream 9 ([#35151](https://projects.theforeman.org/issues/35151))
+
+#### Foreman - Web Interface
+* Models index page does 3 same API requests  ([#34987](https://projects.theforeman.org/issues/34987))
+
+#### Installer - External modules
+* SSO feature settings are not getting enabled and fails with HTTPD CONF issue ([#35524](https://projects.theforeman.org/issues/35524))
+* cache-enabled setting for proxy content module isn't migrated to 'true' properly ([#35157](https://projects.theforeman.org/issues/35157))
+
+#### Packaging - RPMs
+* Sendmail binary is not present on EL8 and needs manual configuration ([#35461](https://projects.theforeman.org/issues/35461))
+
+#### Smart Proxy - Packaging
+* Declare compatible versions of Sinatra  ([#35507](https://projects.theforeman.org/issues/35507))
+
+*A full list of changes in 3.3.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1600)*
+
 ### Release notes for 3.3.0
 #### Foreman
 * Support EC (and other non-RSA) keys in Foreman core ([#34843](https://projects.theforeman.org/issues/34843))
