--- a/_includes/manuals/2.2/3.6_upgrade.md
+++ b/_includes/manuals/2.2/3.6_upgrade.md
@@ -33,7 +33,7 @@ For more information about how to backup your instance head over to
 
 Before proceeding, it is necessary to shutdown the Foreman instance (e.g.
 `systemctl stop httpd foreman.service foreman.socket` or
-`systemctl stop apache foreman.service foreman.socket` usually).
+`systemctl stop apache2 foreman.service foreman.socket` usually).
 
 Now it's time to perform the actual upgrade.  This process if different
 depending on how you downloaded Foreman.  You only need to perform *one* of
@@ -174,7 +174,7 @@ On RPM installations, run:
 
 And on Debian/Ubuntu installations, run:
 
-    systemctl start apache foreman.service foreman.socket
+    systemctl start apache2 foreman.service foreman.socket
 
 #### Optional Step 5 - Reclaim database space
 
