--- a/_includes/manuals/3.0/3.6_upgrade.md
+++ b/_includes/manuals/3.0/3.6_upgrade.md
@@ -65,7 +65,7 @@ systemctl stop httpd foreman.service foreman.socket dynflow\*
 </div>
 <div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
 {% highlight bash %}
-systemctl stop apache foreman.service foreman.socket dynflow\*
+systemctl stop apache2 foreman.service foreman.socket dynflow\*
 {% endhighlight %}
 </div>
 
@@ -263,7 +263,7 @@ systemctl start httpd foreman.service foreman.socket
 </div>
 <div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
 {% highlight bash %}
-systemctl start apache foreman.service foreman.socket
+systemctl start apache2 foreman.service foreman.socket
 {% endhighlight %}
 </div>
 
