Add Platform team's headline features for Foreman 3.5

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -4,6 +4,29 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Enabled HTTP/2 on Apache
+
+HTTP/2 is now enabled by default on all platforms.
+Compared to HTTP/1(.1) the newer HTTP/2 protocol allows multiplexing over a single connection, making it possible for clients to retrieve multiple resources at the same time.
+For example, browsers no longer need to wait for one one image to complete before requesting the next image.
+
+#### Use of system crypto policy with Apache on Enterprise Linux 8
+
+Red Hat Enterprise Linux 8 [introduced consistent crypto policies](https://www.redhat.com/en/blog/consistent-security-crypto-policies-red-hat-enterprise-linux-8) and Foreman's installer now configures Apache to use those.
+Where previously the installer manually maintained a list of protocols and ciphers, it now follows what is configured system wide.
+
+Note that Katello users can't use the FUTURE policy since `cdn.redhat.com` has a cerificate signed with SHA1 in its signature chain.
+This was already a problem prior to this change.
+See [Red Hat BZ#2117265](https://bugzilla.redhat.com/show_bug.cgi?id=2117265) for more information.
+
+For Debian/Ubuntu users nothing has changed.
+
+#### Redis 6 on Enterprise Linux 8
+
+The installer now ensures Redis 6 is used on Enterprise Linux 8.
+The Redis 5 AppStream [went EOL in May 2022](https://access.redhat.com/support/policy/updates/rhel-app-streams-life-cycle).
+Previously it was up to the user to switch streams, but now the installer enforces the `redis:6` stream and updates the package.
+
 ### Upgrade warnings
 
 * The `foreman_chef` plugin is unmaintained and broken since a few releases.
