add upgrade warning about chef

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -6,6 +6,9 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+* The `foreman_chef` plugin is unmaintained and broken since a few releases.
+  It has been removed from the Installer and Packaging.
+
 ### Deprecations
 
 ### Release Notes
