Ansible.cfg release note

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -27,6 +27,12 @@ The installer now ensures Redis 6 is used on Enterprise Linux 8.
 The Redis 5 AppStream [went EOL in May 2022](https://access.redhat.com/support/policy/updates/rhel-app-streams-life-cycle).
 Previously it was up to the user to switch streams, but now the installer enforces the `redis:6` stream and updates the package.
 
+#### Allow manual modifications of ansible.cfg
+
+The installer no longer manages ansible.cfg and thus allows users to put in their own modifications.
+This file was previously used to configure the options that Foreman required to have set.
+This is no longer the case as the necessary options are set using a different mechanism.
+
 ### Upgrade warnings
 
 * The `foreman_chef` plugin is unmaintained and broken since a few releases.
