--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -32,6 +32,8 @@ Previously it was up to the user to switch streams, but now the installer enforc
 The installer no longer manages ansible.cfg and thus allows users to put in their own modifications.
 This file was previously used to configure the options that Foreman required to have set.
 This is no longer the case as the necessary options are set using a different mechanism.
+During upgrades the file is not touched which means some cruft remains.
+It is safe to remove the file or remove all content.
 
 ### Upgrade warnings
 
